[gd_scene load_steps=4 format=3 uid="uid://b0pxcwicgt62l"]

[ext_resource type="Script" path="res://Scripts/npc.gd" id="1_1lrn1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bksm0"]
size = Vector2(40, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_7clcg"]
radius = 34.0588

[node name="NPC" type="CharacterBody2D" groups=["npc"]]
position = Vector2(1, 32)
collision_layer = 2
collision_mask = 9
script = ExtResource("1_1lrn1")

[node name="Body" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Arm1" type="ColorRect" parent="Body"]
layout_mode = 0
offset_left = 16.0
offset_top = 40.0
offset_right = 26.0
offset_bottom = 51.0
metadata/_edit_use_anchors_ = true

[node name="Gun" type="ColorRect" parent="Body/Arm1"]
visible = false
layout_mode = 0
offset_left = 31.0
offset_top = 2.0
offset_right = 54.0
offset_bottom = 9.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="ShootPos" type="Node2D" parent="Body/Arm1/Gun"]
position = Vector2(24, 4)
rotation = 1.5708

[node name="Arm2" type="ColorRect" parent="Body"]
layout_mode = 0
offset_left = 15.0
offset_top = -11.0
offset_right = 25.0
metadata/_edit_use_anchors_ = true

[node name="Glasses" type="ColorRect" parent="Body"]
layout_mode = 0
offset_left = 40.0
offset_top = 2.0
offset_right = 45.0
offset_bottom = 38.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Life_Amount" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = -54.0
offset_right = 20.0
offset_bottom = -31.0
grow_horizontal = 2
text = "LIVES"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bksm0")

[node name="BulletCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletCollision"]
shape = SubResource("CircleShape2D_7clcg")
debug_color = Color(0.999623, 0, 0.106907, 0.42)

[node name="PlayerDetect" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerDetect"]
position = Vector2(6, 0)
polygon = PackedVector2Array(0, 0, 446, -327, 438, 279)

[node name="BulletTimer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="WaryTimer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="body_entered" from="BulletCollision" to="." method="_on_bullet_collision_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="PlayerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
[connection signal="timeout" from="WaryTimer" to="." method="_on_wary_timer_timeout"]
